tui/tests/snapshots/editor_insert__editor_keymap_open.snap
---
source: tui/tests/editor_insert.rs
expression: text
---
 Note 'Sample Note' insert mode                                                                   [Ctrl+h] Show keymap 
[Browser]                                   ▐ 󱇗 Sample Note                                                             
 󰝰 Notes                                    ▐ 1 Hi :D                                                                   
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                    ┌────────────────────────────────Editor Keymap─────────────────────────────────┐                    
                    │                                                                              │                    
                    │                                                                              │                    
                    │  | Mappings                 | Description                                |   │                    
                    │  |--------------------------|--------------------------------------------|   │                    
                    │  | `Backspace`              | Delete one character before cursor         |   │                    
                    │  | `Ctrl+D`, `Delete`       | Delete one character next to cursor        |   │                    
                    │  | `Enter`, `Ctrl+J`        | Insert newline                             |   │                    
                    │  | `Ctrl+K`                 | Delete from cursor until the end of line   |   │                    
                    │  | `Ctrl+U`                 | Delete from cursor until the head of line  |   │                    
                    │  | `Ctrl+R`                 | Redo                                       |   │                    
                    │  | `Ctrl+Y`                 | Paste yanked text                          |   │                    
                    │  | `Ctrl+F`, `→`            | Move cursor forward by one character       |   │                    
                    │  | `Ctrl+B`, `←`            | Move cursor backward by one character      |   │                    
                    │  | `Ctrl+P`, `↑`            | Move cursor up by one line                 |   │                    
                    │  | `Ctrl+N`, `↓`            | Move cursor down by one line               |   │                    
                    │  | `Ctrl+A`, `Home`         | Move cursor to the head of line            |   │                    
                    │  | `Ctrl+E`, `End`          | Move cursor to the end of line             |   │                    
                    │  | `Alt+<`                  | Move cursor to top of lines                |   │                    
                    │  | `Alt+>`                  | Move cursor to bottom of lines             |   │                    
                    │                                                                              │                    
                    │                                                                              │                    
                    │                                                                              │                    
                    │                                                                              │                    
                    │                            Press any key to close                            │                    
                    │                                                                              │                    
                    └──────────────────────────────────────────────────────────────────────────────┘                    
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ INSERT   󰝰 Notes  󱇗 Sample Note 
